--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea4.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea4.xhtml
@@ -26,7 +26,7 @@ const ctxA = document.getElementById('myChartAste').getContext('2d');
 const ctxH = document.getElementById('myChartHilabete').getContext('2d');
 
 const dataAD = [#{aukera3ViewMB.astekoKontsumoaLortu().get(0).prezioa},#{aukera3ViewMB.astekoKontsumoaLortu().get(1).prezioa},#{aukera3ViewMB.astekoKontsumoaLortu().get(2).prezioa},#{aukera3ViewMB.astekoKontsumoaLortu().get(3).prezioa},#{aukera3ViewMB.astekoKontsumoaLortu().get(4).prezioa},#{aukera3ViewMB.astekoKontsumoaLortu().get(5).prezioa},#{aukera3ViewMB.astekoKontsumoaLortu().get(6).prezioa}];
-const dataHD = [50, 30, 40, 60, 80, 70, 20,10,32,19,56,69];
+const dataHD = [#{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(0).prezioa}, #{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(1).prezioa}, #{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(2).prezioa}, #{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(3).prezioa}, #{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(4).prezioa}, #{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(5).prezioa}, #{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(6).prezioa},#{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(7).prezioa},#{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(8).prezioa},#{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(9).prezioa},#{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(10).prezioa},#{aukera3ViewMB.hilabetekaKontsumoaKalkulatu().get(11).prezioa}];
 
 const backgroundColor = Array(7).fill('rgba(255, 99, 132, 0.2)');
 const borderColor = Array(7).fill('rgba(255, 99, 132, 1)');
