--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA02/historiala1.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA02/historiala1.xhtml
@@ -4,9 +4,10 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <head>
-    <link rel="stylesheet" href="ESTILOA/historiala.css"/>
+    <link rel="stylesheet" href="../ESTILOA/historiala.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="historiala.js"></script>
+    <title>02 AUKERA</title>
 </head>
 <h:body>
 <h:form class="menuNagusirakoBotoia">
