--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA02/programaEditatu.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA02/programaEditatu.xhtml
@@ -5,8 +5,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
   <head>
     <meta charset="UTF-8"/>
-    <title>Menú con botones</title>
-    <link rel="stylesheet" href="ESTILOA/gailuak2.css"/>
+    <title>02 AUKERA</title>
+    <link rel="stylesheet" href="../ESTILOA/gailuak2.css"/>
   </head>
   <body id="body">
  <h:form class="menuNagusirakoBotoia">
@@ -46,7 +46,7 @@
             </tr>
             <tr>
                 <td>
-                    <h:outputText id="izena" value="#{programa.gailuIzena}" required="true" requiredMessage="Izena eremua derrigorrezkoa da."/>
+                    <h:outputText id="izena" value="#{programa.gailuIzena}"/>
                     <h:message for="izena" style="color:red" />
                 </td>
                 <td>
