--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA01/gailuak.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA01/gailuak.xhtml
@@ -5,8 +5,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
   <head>
     <meta charset="UTF-8"></meta>
-    <title>Menú con botones</title>
-    <link rel="stylesheet" href="ESTILOA/gailuak.css"></link>
+    <title>01 AUKERA</title>
+    <link rel="stylesheet" href="../ESTILOA/gailuak.css"></link>
   </head>
   <body id="body">
   <form class="menuNagusirakoBotoia" action="#{request.contextPath}/index.html">
