--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA04/gailuakEditatu2.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA04/gailuakEditatu2.xhtml
@@ -5,8 +5,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
   <head>
     <meta charset="UTF-8"/>
-    <title>Menú con botones</title>
-    <link rel="stylesheet" href="ESTILOA/gailuak2.css"/>
+    <title>04 AUKERA</title>
+    <link rel="stylesheet" href="../ESTILOA/gailuak2.css"/>
   </head>
   <body id="body">
   <h:form class="menuNagusirakoBotoia">
