--- a/VirtualMaid/src/main/webapp/index.html
+++ b/VirtualMaid/src/main/webapp/index.html
@@ -2,26 +2,26 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Menú con botones</title>
+    <title>AURKIBIDEA</title>
     <link rel="stylesheet" href="EDUKIAK/ESTILOA/index.css">
   </head>
   <body id="body">
     <div class="container">
     <table>
       <tr>
-        <td><a href="EDUKIAK/orduak.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/argia.jpg"> AUKERA 01</button></a></td>
+        <td><a href="EDUKIAK/AUKERA01/orduak.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/argia.jpg"> AUKERA 01</button></a></td>
         <!-- <form id="form-1" action="EDUKIAK/ADMIN/adminKudeaketa.xhtml">
 	                <input type="submit" value="ADMINISTRARIA" id="button-1"/>
 	    </form> -->
       </tr>
       <tr>
-        <td><a href="EDUKIAK/historiala1.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/diario.jpg"> AUKERA 02</button></a></td>
+        <td><a href="EDUKIAK/AUKERA02/historiala1.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/diario.jpg"> AUKERA 02</button></a></td>
       </tr>
       <tr>
-        <td><a href="EDUKIAK/AUKERA3/informea4.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/historial.jpg"> AUKERA 03</button></a></td>
+        <td><a href="EDUKIAK/AUKERA03/informea4.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/historial.jpg"> AUKERA 03</button></a></td>
       </tr>
       <tr>
-        <td><a href="EDUKIAK/gailuakEditatu.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/engranaje.jpg"> AUKERA 04</button></a></td>
+        <td><a href="EDUKIAK/AUKERA04/gailuakEditatu.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/engranaje.jpg"> AUKERA 04</button></a></td>
       </tr>
     </table>
     </div>
