--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA03/informea4.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA03/informea4.xhtml
@@ -79,13 +79,13 @@ const optionsH = {
     x: {
       title: {
         display: true,
-        text: 'Meses del Año'
+        text: 'Urteko Hilabeteak'
       }
     },
     y: {
       title: {
         display: true,
-        text: 'Valores'
+        text: 'Gastua (€)'
       }
     }
   }
